--- a/src/components/LoginSignupForm.css
+++ b/src/components/LoginSignupForm.css
@@ -16,7 +16,7 @@
     padding: 0;
     color: #fff;
     text-align: center;
-
+    transform: translateY(-50%);
 }
 
 .box .inputbox {
@@ -36,6 +36,15 @@
     background: transparent;
 }
 
+.box .inputbox input:focus ~ label,
+.box .inputbox input:valid:not(:placeholder-shown) ~ label,
+.box .inputbox input:invalid ~ label {
+    top: -19px;
+    left: 0;
+    color: #ff0057;
+    font-size: 12px;
+}
+
 .box .inputbox label {
     position: absolute;
     top: 0;
@@ -46,14 +55,6 @@
     letter-spacing: 1px;
     pointer-events: none;
     transition: .3s;
-}
-
-.box .inputbox input:focus ~ label,
-.box .inputbox input:valid ~ label {
-    top: -19px;
-    left: 0;
-    color: #ff0057;
-    font-size: 12px;
 }
 
 .box input[type="submit"] {
