--- a/src/components/LoginSignupForm.css
+++ b/src/components/LoginSignupForm.css
@@ -1,18 +1,18 @@
 .box {
     position: absolute;
-    top: 50%;
+    top: 5%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
+    transform: translateX(-50%);
+    width: 600px;
     padding: 40px;
-    background: rgba(0, 0, 0, .8);
+    background: rgba(0, 0, 0, .6);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, .5);
     border-radius: 10px;
 }
 
 .box h2 {
-    margin: 0;
+    margin: 20px;
     padding: 0;
     color: #fff;
     text-align: center;
