--- a/src/components/LoginSignupForm.css
+++ b/src/components/LoginSignupForm.css
@@ -1,14 +1,22 @@
 .box {
     position: absolute;
-    top: 5%;
     left: 50%;
-    transform: translateX(-50%);
     width: 600px;
     padding: 40px;
     background: rgba(0, 0, 0, .6);
     box-sizing: border-box;
     box-shadow: 0 15px 35px rgba(0, 0, 0, .5);
     border-radius: 10px;
+}
+
+.box#signup {
+    margin: 5px;
+    transform: translateX(-50%);
+}
+
+.box#login {
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .box h2 {
