--- a/src/components/recruiterworkspace/RecruiterWorkspace.css
+++ b/src/components/recruiterworkspace/RecruiterWorkspace.css
@@ -14,13 +14,21 @@
     margin: 20px;
 }
 
-.container .card {
+.container .card,
+.container .button {
     position: relative;
     height: 250px;
-    background: #fff;
     display: flex;
     width: 45%;
     margin: 30px 0;
+}
+
+.container .card {
+    background: #fff;
+}
+
+.container .button {
+    background: transparent;
 }
 
 .container .card .imgBx {
