--- a/src/components/candidateworkspace/CandidateWorkspace.css
+++ b/src/components/candidateworkspace/CandidateWorkspace.css
@@ -14,6 +14,15 @@
     margin: 20px;
 }
 
+h1 {
+    color: #3d3d3d;
+    font-size: 5em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 @media (max-width: 992px) {
     .container {
         width: 100%;
