--- a/src/components/recruiterworkspace/RecruiterWorkspace.css
+++ b/src/components/recruiterworkspace/RecruiterWorkspace.css
@@ -14,6 +14,15 @@
     margin: 20px;
 }
 
+h1.recruiter-msg {
+    color: #3d3d3d;
+    font-size: 5em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .container .card,
 .container .button {
     position: relative;
